--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('Breeze Airways.webp');
+    background-image: url('assets/Breeze Airways.webp');
 }
 
 header {
